# Sahayak

sahayak/: .env.example  CLAUDE.md  README.md  docker-compose.sahayak.yml  openclaw.sahayak.dev.json  openclaw.sahayak.json  openclaw.sahayak.sovereign.json
sahayak/agent/: SYSTEM.md
sahayak/bhashini-lang/: pyproject.toml
sahayak/bhashini-lang/bhashini_lang/: __init__.py  client.py  fallback.py  sarvam.py  server.py  types.py
sahayak/bhashini-lang/tests/: conftest.py  test_server.py
sahayak/docs/: DEVELOPER_GUIDE.md  agent-configuration.md  architecture.md  debugging-and-testing.md  deployment.md  local-llm-setup.md  mcp-bhashini-lang.md  mcp-govdata-india.md  sarvam-sovereign-stack.md  security.md
sahayak/docs/stories/: S1.1-fork-harden-openclaw.md  S1.2-whatsapp-integration.md  S2.1-language-detection-translation.md  S2.2-speech-to-text.md  S2.3-text-to-speech.md  S2.4-voice-pipeline.md  S3.1-mandi-prices.md  S3.2-pm-kisan.md  S3.3-weather-advisory.md  S3.4-scheme-eligibility.md  S4.1-intent-router.md  S4.2-llm-integration.md  S4.3-profile-collection.md  S4.4-error-handling.md
sahayak/govdata-india/: pyproject.toml
sahayak/govdata-india/govdata_india/: __init__.py  cache.py  mandi.py  pmkisan.py  schemes.py  server.py  types.py  weather.py
sahayak/govdata-india/govdata_india/data/: schemes.json
sahayak/govdata-india/tests/: conftest.py  test_server.py
skills/sahayak-gov/: SKILL.md
skills/sahayak-lang/: SKILL.md
